# git-bump

./: Cargo.toml
src/: cli.rs  lib.rs  main.rs
